# aid-dashboard

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: fetch-data.yml
aid_dashboard_data/borders/: border_crossings.geojson  border_crossings.geojson.meta.json
aid_dashboard_data/checkpoints/: gaza_roads_checkpoints.geojson.meta.json
aid_dashboard_data/health_centers/: opt_healthfacilities.json  opt_healthfacilities.json.meta.json
backend/: __init__.py  config.py
backend/models/: schemas.py
backend/pipelines/: borders.py  checkpoints.py  datasets.py  health_facilities.py
backend/routes/: admin_updates.py  borders.py  checkpoints.py  datasets.py  health.py  healthcheck.py
backend/services/: auth.py  datasets.py  files.py  http.py  ids.py  updates.py
frontend/: index.html  script.js  style.css
frontend/src/: admin.js  api.js  facilityInfo.js  filter.js  mapLayers.js  utils.js
tests/: test_backend_endpoints.py  test_data_integrity.py
